--- a/NutritionUsers/NutritionUsers.fsproj
+++ b/NutritionUsers/NutritionUsers.fsproj
@@ -10,4 +10,7 @@
     <PackageReference Include="MathNet.Numerics" Version="3.20.0" />
     <PackageReference Include="MathNet.Numerics.FSharp" Version="3.20.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Generator\Generator.fsproj" />
+  </ItemGroup>
 </Project>
