--- a/Generator/Generator.fsproj
+++ b/Generator/Generator.fsproj
@@ -8,4 +8,9 @@
     <Compile Include="Library.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="3.20.0" />
+    <PackageReference Include="MathNet.Numerics.FSharp" Version="3.20.0" />
+  </ItemGroup>
+
 </Project>
