updated gitignore for sub directories

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 *~
 
 # build
-[Oo]bj/
-[Bb]in/
-packages/
-TestResults/
-testrunner
+**/[Oo]bj/
+**/[Bb]in/
+**/packages/
+**/TestResults/
+**/testrunner
 
 # globs
 Makefile.in
